# Running-Acro-with-5s-TES

./: env.example  pyproject.toml
docker/analytics-dev/: Dockerfile
src/five_safes_tes_analytics/clients/: analytics_tes_client.py
src/five_safes_tes_analytics/node/: local_processing.py  local_processing_base.py
src/five_safes_tes_analytics/runners/: analysis_runner.py
tests/: test_local_processing.py
